@@ -80,11 +80,10 @@ typedef enum {
 } nwamui_env_status_t; /* TODO - provide means to get status in env */
 
 typedef enum {
-	NWAMUI_ENV_NAMESERVICES_DNS,
-	NWAMUI_ENV_NAMESERVICES_FILES,
-	NWAMUI_ENV_NAMESERVICES_NIS,
-	NWAMUI_ENV_NAMESERVICES_NISPLUS,
-	NWAMUI_ENV_NAMESERVICES_LDAP,
+	NWAMUI_ENV_NAMESERVICES_DNS   = NWAM_NAMESERVICES_DNS,
+	NWAMUI_ENV_NAMESERVICES_FILES = NWAM_NAMESERVICES_FILES,
+	NWAMUI_ENV_NAMESERVICES_NIS   = NWAM_NAMESERVICES_NIS,
+	NWAMUI_ENV_NAMESERVICES_LDAP  = NWAM_NAMESERVICES_LDAP,
 	NWAMUI_ENV_NAMESERVICES_LAST /* Not to be used directly */
 } nwamui_env_nameservices_t;
 
